gccida/g2/thread_prologue_and_epilogue_insns
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/thread_prologue_and_epilogue_insns/src/function.c:8043:4: error: expected ';' after expression
rtx end; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/thread_prologue_and_epilogue_insns/src/function.c:8043:5: error: use of undeclared identifier 'end'
rtx end; // r13 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/thread_prologue_and_epilogue_insns/src/function.c:8044:4: error: expected ';' after expression
rtx last_insn; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/thread_prologue_and_epilogue_insns/src/function.c:8044:5: error: use of undeclared identifier 'last_insn'
rtx last_insn; // r15 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/thread_prologue_and_epilogue_insns/src/function.c:8047:4: error: expected ';' after expression
rtx v24; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/thread_prologue_and_epilogue_insns/src/function.c:8047:5: error: use of undeclared identifier 'v24'
rtx v24; // r14 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/thread_prologue_and_epilogue_insns/src/function.c:8048:4: error: expected ';' after expression
rtx v25; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/thread_prologue_and_epilogue_insns/src/function.c:8048:5: error: use of undeclared identifier 'v25'
rtx v25; // r15 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/thread_prologue_and_epilogue_insns/src/function.c:8057:4: error: expected ';' after expression
rtx active_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/thread_prologue_and_epilogue_insns/src/function.c:8057:5: error: use of undeclared identifier 'active_insn'; did you mean 'active_insn_p'?
rtx active_insn; // rax 
    ^~~~~~~~~~~
    active_insn_p
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/thread_prologue_and_epilogue_insns/src/rtl.h:1354:12: note: 'active_insn_p' declared here
extern int active_insn_p                PARAMS ((rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/thread_prologue_and_epilogue_insns/src/function.c:8060:4: error: expected ';' after expression
rtx v37; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/thread_prologue_and_epilogue_insns/src/function.c:8060:5: error: use of undeclared identifier 'v37'
rtx v37; // r14 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/thread_prologue_and_epilogue_insns/src/function.c:8071:4: error: expected ';' after expression
rtx v48; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/thread_prologue_and_epilogue_insns/src/function.c:8071:5: error: use of undeclared identifier 'v48'
rtx v48; // rdi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/thread_prologue_and_epilogue_insns/src/function.c:8072:4: error: expected ';' after expression
rtx v49; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/thread_prologue_and_epilogue_insns/src/function.c:8072:5: error: use of undeclared identifier 'v49'
rtx v49; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/thread_prologue_and_epilogue_insns/src/function.c:8087:6: error: use of undeclared identifier 'v64'
rtx *v64; // r9 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/thread_prologue_and_epilogue_insns/src/function.c:8088:6: error: use of undeclared identifier 'v65'
rtx *v65; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/thread_prologue_and_epilogue_insns/src/function.c:8091:4: error: expected ';' after expression
rtx v68; // r13 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/thread_prologue_and_epilogue_insns/src/obj/function.o] Error 1
